--- a/index.html
+++ b/index.html
@@ -1,10 +1,49 @@
-<!doctype html>
-<html lang="pt">
-    <head>
-        <title>Angolan Name Generator</title>
-        <meta charset="utf-8">
-    </head>
-    <body>
-        <h1>Worked!</h1>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>Gerador de nome angolano</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="generate.js"></script>
+
+</head>
+<body>
+    <div class="container">
+        <h1 class="mt-4">Gerador de nome angolano</h1>
+
+        <div class="row mt-4">
+            <div class="row mt-2 mb-3">
+                <small>
+                    Made by <a target="_blank" href="https://github.com/terremoth/who-dont-follow-me">Terremoth</a> with love ❤️
+                </small>
+            </div>
+            <div class="col-md-4 mt-3">
+                <label class="visually-hidden" for="user">Seu primeiro nome:</label>
+                <input placeholder="Your first name" required autocomplete="autocomplete" class="form-control" type="text" id="user_name">
+            </div>
+
+            <div class="col-md-4 mt-3">
+                <label class="visually-hidden" for="key">Sex:</label>
+                <select class="form-select" id="sex">
+                    <option selected value="o">Masculino</option>
+                    <option value="a">Feminino</option>
+                </select>
+            </div>
+
+            <div class="col-md-4 mt-3">
+                <button type="button" id="check" class="btn btn-success">
+                    Me mostre meu nome angolano!
+                </button>
+            </div>
+        </div>
+
+        <hr>
+        <div class="row mt-3 m-1" id="my-new-name">
+            <h2>Seu nome angolano é: <span class="badge text-bg-primary"></span></h2>
+        </div>
+    </div>
+</body>
 </html>
