--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             </div>
             <div class="col-md-4 mt-3">
                 <label class="visually-hidden" for="user">Seu primeiro nome:</label>
-                <input placeholder="Your first name" required autocomplete="autocomplete" class="form-control" type="text" id="user_name">
+                <input placeholder="Seu primeiro nome" required autocomplete="autocomplete" class="form-control" type="text" id="user_name">
             </div>
 
             <div class="col-md-4 mt-3">
-                <label class="visually-hidden" for="key">Sex:</label>
+                <label class="visually-hidden" for="key">Sexo:</label>
                 <select class="form-select" id="sex">
                     <option selected value="o">Masculino</option>
                     <option value="a">Feminino</option>
