Open graph e social preview

--- a/index.html
+++ b/index.html
@@ -9,6 +9,34 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/gh/nastyox/Rando.js@master/code/plain-javascript/2.0.0/rando-min.js"></script>
     <script src="generate.js"></script>
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Gerador de nome angolano" />
+    <meta property="og:title" content="Gerador de nome angolano — Descubra seu nome angolano" />
+    <meta property="og:description" content="Gere um nome angolano instantaneamente. Escolha gênero e descubra seu nome tradicional angolano." />
+    <meta property="og:url" content="https://terremoth.github.io/angolan-name-generator/" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/terremoth/angolan-name-generator/main/angolan-name-generator.jpeg" />
+    <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/terremoth/angolan-name-generator/main/angolan-name-generator.jpeg" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <!-- Recommended for good large-preview display -->
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Gerador de nome angolano" />
+    
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@terremoth" /> <!-- opcional: ajuste se usar outro @ -->
+    <meta name="twitter:creator" content="@terremoth" /> <!-- opcional -->
+    <meta name="twitter:title" content="Gerador de nome angolano — Descubra seu nome angolano" />
+    <meta name="twitter:description" content="Gere um nome angolano instantaneamente. Escolha gênero e descubra seu nome tradicional angolano." />
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/terremoth/angolan-name-generator/main/angolan-name-generator.jpeg" />
+    <meta name="twitter:image:alt" content="Preview: Gerador de nome angolano — homem sorrindo com polegar para cima" />
+    
+    <!-- Mobile / general -->
+    <link rel="canonical" href="https://terremoth.github.io/angolan-name-generator/" />
+    <meta name="description" content="Gere um nome angolano instantaneamente. Escolha gênero e descubra seu nome tradicional angolano." />
+    <meta name="theme-color" content="#ffffff" />
+
 </head>
 <body>
     <div class="container">
