--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="row mt-4">
             <div class="row mt-2 mb-3">
                 <small>
-                    Made by <a target="_blank" href="https://github.com/terremoth/angolan-name-generator">Terremoth</a> with love ❤️
+                    Made by <a target="_blank" href="https://github.com/terremoth/angolan-name-generator">Terremoth</a> with ⚡ & ❤️
                 </small>
             </div>
             <div class="col-md-4 mt-3">
